Replace "bean" translations to "Bean"

--- a/l10n/po/ja_JP/_guides/amazon-s3.adoc.po
+++ b/l10n/po/ja_JP/_guides/amazon-s3.adoc.po
@@ -449,7 +449,7 @@ msgstr ""
 #: upstream/_guides/amazon-s3.adoc:196
 #, fuzzy
 msgid "Nothing fancy. One important thing to note is that having a default constructor is required by the JSON serialization layer. The static `from` method creates a bean based on the `S3Object` object provided by the S3 client response when listing all the objects in a bucket."
-msgstr "派手なことは何もありません。注意すべき重要なことは、デフォルトのコンストラクタを持つことは、JSONシリアライゼーションレイヤーによって要求されるということです。static `from` メソッドは、バケット内のすべてのオブジェクトをリストアップする際に、S3 クライアントのレスポンスで提供される `S3Object` オブジェクトに基づいてビーンを作成します。"
+msgstr "派手なことは何もありません。注意すべき重要なことは、デフォルトのコンストラクタを持つことは、JSONシリアライゼーションレイヤーによって要求されるということです。static `from` メソッドは、バケット内のすべてのオブジェクトをリストアップする際に、S3 クライアントのレスポンスで提供される `S3Object` オブジェクトに基づいてBeanを作成します。"
 
 #. type: Title ==
 #: upstream/_guides/amazon-s3.adoc:197
