--- a/l10n/po/ja_JP/_guides/context-propagation.adoc.po
+++ b/l10n/po/ja_JP/_guides/context-propagation.adoc.po
@@ -259,7 +259,7 @@ msgstr "CDIのためのコンテキスト伝搬"
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:180
 msgid "In terms of CDI, `@RequestScoped`, `@ApplicationScoped` and `@Singleton` beans get propagated and are available in other threads.  `@Dependent` beans as well as any custom scoped beans cannot be automatically propagated via CDI Context Propagation."
-msgstr "CDI の観点からは、 `@RequestScoped`, `@ApplicationScoped`, `@Singleton` Beanは伝播され、他のスレッドで利用可能です。 `@Dependent` ビーンやカスタムスコープされたビーンは、CDI コンテキスト伝播を介して自動的に伝播されることはありません。"
+msgstr "CDI の観点からは、 `@RequestScoped`, `@ApplicationScoped`, `@Singleton` Beanは伝播され、他のスレッドで利用可能です。 `@Dependent` BeanやカスタムスコープされたBeanは、CDI コンテキスト伝播を介して自動的に伝播されることはありません。"
 
 #. type: Plain text
 #: upstream/_guides/context-propagation.adoc:187
