--- a/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
+++ b/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
@@ -237,7 +237,7 @@ msgstr "`USER_PROPERTY_NAME` と `PASSWORD_PROPERTY_NAME` は、ユーザー名/
 #: upstream/_guides/credentials-provider.adoc:112
 #, fuzzy
 msgid "It is required that implementations be valid `@ApplicationScoped` CDI beans."
-msgstr "実装は有効な `@ApplicationScoped` CDI ビーンズであることが要求されます。"
+msgstr "実装は有効な `@ApplicationScoped` CDI Beanであることが要求されます。"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:114
