--- a/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/getting-started-testing.adoc.po
@@ -1533,7 +1533,7 @@ msgstr " `@InjectSpy` で、モックの代わりにスパイを使用する"
 #. type: Plain text
 #: upstream/_guides/getting-started-testing.adoc:868
 msgid "Building on the features provided by `InjectMock`, Quarkus also allows users to effortlessly take advantage of link:https://site.mockito.org/[Mockito] for spying on the beans supported by `QuarkusMock`.  This functionality is available via the `@io.quarkus.test.junit.mockito.InjectSpy` annotation which is available in the `quarkus-junit5-mockito` dependency."
-msgstr "`InjectMock`  で提供されている機能をベースに、 `QuarkusMock`  でサポートされているビーンズをスパイするために link:https://site.mockito.org/[Mockito ]を簡単に利用できるようにしました。この機能は、 `quarkus-junit5-mockito`  依存関係で利用可能な `@io.quarkus.test.junit.mockito.InjectSpy`  アノテーションを介して利用できます。"
+msgstr "`InjectMock`  で提供されている機能をベースに、 `QuarkusMock`  でサポートされているBeanをスパイするために link:https://site.mockito.org/[Mockito ]を簡単に利用できるようにしました。この機能は、 `quarkus-junit5-mockito`  依存関係で利用可能な `@io.quarkus.test.junit.mockito.InjectSpy`  アノテーションを介して利用できます。"
 
 #. type: Plain text
 #: upstream/_guides/getting-started-testing.adoc:872
