--- a/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
+++ b/l10n/po/ja_JP/_guides/grpc-service-consumption.adoc.po
@@ -390,7 +390,7 @@ msgstr "クライアントインターセプター"
 #: upstream/_guides/grpc-service-consumption.adoc:195
 #, fuzzy
 msgid "You can implement a gRPC client interceptor by implementing an `@ApplicationScoped` bean implementing `io.grpc.ClientInterceptor`:"
-msgstr "`@ApplicationScoped` `io.grpc.ClientInterceptor` ビーンを実装することで、gRPC クライアントのインターセプターを実装することができます。"
+msgstr "`@ApplicationScoped` `io.grpc.ClientInterceptor` Beanを実装することで、gRPC クライアントのインターセプターを実装することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/grpc-service-consumption.adoc:200
