--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -267,7 +267,7 @@ msgstr "エンティティーマネージャーを注入して楽しむ"
 #: upstream/_guides/hibernate-orm.adoc:107
 #, fuzzy
 msgid "Mark your CDI bean method as `@Transactional` and the `EntityManager` will enlist and flush at commit."
-msgstr "CDI豆メソッドを `@Transactional` としてマークし、 `EntityManager` はコミット時にエンリストしてフラッシュします。"
+msgstr "CDI Beanメソッドを `@Transactional` としてマークし、 `EntityManager` はコミット時にエンリストしてフラッシュします。"
 
 #. type: Block title
 #: upstream/_guides/hibernate-orm.adoc:109
@@ -341,7 +341,7 @@ msgstr "テストやデモ用のデータセットを用意しておくと便利
 #: upstream/_guides/hibernate-orm.adoc:146
 #, fuzzy
 msgid "Make sure to wrap methods modifying your database (e.g. `entity.persist()`) within a transaction. Marking a CDI bean method `@Transactional` will do that for you and make that method a transaction boundary. We recommend doing so at your application entry point boundaries like your REST endpoint controllers."
-msgstr "データベースを変更するメソッド (例: `entity.persist()` ) をトランザクション内でラップするようにしてください。CDI ビーンメソッド `@Transactional` をマークすることで、それを行い、そのメソッドをトランザクションの境界にします。REST エンドポイントコントローラのように、アプリケーションのエントリーポイントの境界でこれを行うことをお勧めします。"
+msgstr "データベースを変更するメソッド (例: `entity.persist()` ) をトランザクション内でラップするようにしてください。CDI Beanメソッド `@Transactional` をマークすることで、それを行い、そのメソッドをトランザクションの境界にします。REST エンドポイントコントローラのように、アプリケーションのエントリーポイントの境界でこれを行うことをお勧めします。"
 
 #. type: Title ===
 #: upstream/_guides/hibernate-orm.adoc:148
