--- a/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-search-orm-elasticsearch.adoc.po
@@ -1652,7 +1652,7 @@ msgstr "Hibernate検索設定リファレンス"
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:788
 #, fuzzy, no-wrap
 msgid "About bean references"
-msgstr "豆の参照について"
+msgstr "Beanの参照について"
 
 #. type: delimited block =
 #: upstream/_guides/hibernate-search-orm-elasticsearch.adoc:791
