--- a/l10n/po/ja_JP/_guides/ide-configuration.adoc.po
+++ b/l10n/po/ja_JP/_guides/ide-configuration.adoc.po
@@ -344,7 +344,7 @@ msgstr "分離された端末または埋め込み端末で、 `mvn compile quar
 #: upstream/_guides/ide-configuration.adoc:122
 #, fuzzy, no-wrap
 msgid "**Apache Netbeans**\n"
-msgstr "*アパッチネットビーンズ*"
+msgstr "**Apache Netbeans**\n"
 
 #. type: Plain text
 #: upstream/_guides/ide-configuration.adoc:124
