--- a/l10n/po/ja_JP/_guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb-panache.adoc.po
@@ -1970,7 +1970,7 @@ msgstr "リポジトリパターンの使用"
 #: upstream/_guides/mongodb-panache.adoc:982
 #, fuzzy
 msgid "If you are using the repository pattern you can use Mockito directly, using the `quarkus-junit5-mockito` module, which makes mocking beans much easier:"
-msgstr "リポジトリパターンを使用している場合は、 `quarkus-junit5-mockito` モジュールを使用して直接 Mockito を使用することができますので、ビーンズのモッキングが非常に簡単になります。"
+msgstr "リポジトリパターンを使用している場合は、 `quarkus-junit5-mockito` モジュールを使用して直接 Mockito を使用することができますので、Beanのモッキングが非常に簡単になります。"
 
 #. type: delimited block -
 #: upstream/_guides/mongodb-panache.adoc:990
