--- a/l10n/po/ja_JP/_guides/qute.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute.adoc.po
@@ -681,7 +681,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/qute.adoc:400
 msgid "Let's suppose the have a `SampleService` bean whose `get()` method returns a list of samples."
-msgstr "`SampleService` ビーンがあり、その `get()` メソッドがサンプルのリストを返すとしましょう。"
+msgstr "`SampleService` Beanがあり、その `get()` メソッドがサンプルのリストを返すとしましょう。"
 
 #. type: Block title
 #: upstream/_guides/qute.adoc:401
