--- a/l10n/po/ja_JP/_guides/reactive-messaging.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-messaging.adoc.po
@@ -23,13 +23,13 @@ msgstr ""
 #: upstream/_guides/reactive-messaging.adoc:6
 #, fuzzy, no-wrap
 msgid "Quarkus - Asynchronous messages between beans"
-msgstr "Quarkus - ビーンズ間の非同期メッセージ"
+msgstr "Quarkus - Bean間の非同期メッセージ"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging.adoc:13
 #, fuzzy
 msgid "Quarkus allows different beans to interact using asynchronous messages, enforcing loose-coupling.  The messages are sent to _virtual addresses_.  It offers 3 types of delivery mechanism:"
-msgstr "Quarkusでは、異なるビーンが非同期メッセージを使用して相互作用することができ、ルーズカップリングが強制されます。メッセージは _仮想アドレス_ に送信されます。3種類の配信メカニズムを提供しています。"
+msgstr "Quarkusでは、異なるBeanが非同期メッセージを使用して相互作用することができ、ルーズカップリングが強制されます。メッセージは _仮想アドレス_ に送信されます。3種類の配信メカニズムを提供しています。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging.adoc:15
@@ -174,7 +174,7 @@ msgstr ""
 #: upstream/_guides/reactive-messaging.adoc:77
 #, fuzzy
 msgid "If not set, the address is the fully qualified name of the bean, for instance, in this snippet it's `org.acme.vertx.GreetingService`."
-msgstr "設定されていない場合、アドレスはビーンの完全修飾名となり、例えばこのスニペットでは `org.acme.vertx.GreetingService` ."
+msgstr "設定されていない場合、アドレスはBeanの完全修飾名となり、例えばこのスニペットでは `org.acme.vertx.GreetingService` ."
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging.adoc:78
@@ -497,7 +497,7 @@ msgstr "物事をまとめる - HTTPとメッセージのブリッジング"
 #: upstream/_guides/reactive-messaging.adoc:262
 #, fuzzy
 msgid "Let's revisit a greeting HTTP endpoint and use asynchronous message passing to delegate the call to a separated bean.  It uses the request/reply dispatching mechanism.  Instead of implementing the business logic inside the JAX-RS endpoint, we are sending a message.  This message is consumed by another bean and the response is sent using the _reply_ mechanism."
-msgstr "挨拶HTTPエンドポイントを再訪し、非同期メッセージパッシングを使用して分離されたビーンに呼び出しを委譲してみましょう。リクエスト/レスポンスディスパッチの仕組みを利用しています。JAX-RSエンドポイント内にビジネスロジックを実装する代わりに、メッセージを送信しています。このメッセージは別のBeanによって消費され、応答は _応答_ 機構を使用して送信されます。"
+msgstr "挨拶HTTPエンドポイントを再訪し、非同期メッセージパッシングを使用して分離されたBeanに呼び出しを委譲してみましょう。リクエスト/レスポンスディスパッチの仕組みを利用しています。JAX-RSエンドポイント内にビジネスロジックを実装する代わりに、メッセージを送信しています。このメッセージは別のBeanによって消費され、応答は _応答_ 機構を使用して送信されます。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging.adoc:264
@@ -572,7 +572,7 @@ msgstr "レスポンスを取得したら、本文を抽出してユーザーに
 #: upstream/_guides/reactive-messaging.adoc:314
 #, fuzzy
 msgid "If you call this endpoint, you will wait and get a timeout. Indeed, no one is listening.  So, we need a consumer listening on the `greeting` address. Create a `GreetingService` bean with the following content:"
-msgstr "このエンドポイントを呼び出すと、待っていてタイムアウトになります。確かに、誰も聞いていません。そこで、 `greeting` アドレスでリスニングしているコンシューマーが必要です。以下の内容の `GreetingService` ビーンを作成します。"
+msgstr "このエンドポイントを呼び出すと、待っていてタイムアウトになります。確かに、誰も聞いていません。そこで、 `greeting` アドレスでリスニングしているコンシューマーが必要です。以下の内容の `GreetingService` Beanを作成します。"
 
 #. type: Block title
 #: upstream/_guides/reactive-messaging.adoc:316
