--- a/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler-reference.adoc.po
@@ -47,7 +47,7 @@ msgstr "予定されている方法"
 #: upstream/_guides/scheduler-reference.adoc:28
 #, fuzzy
 msgid "If you annotate a method with `@io.quarkus.scheduler.Scheduled` it is automatically scheduled for invocation.  In fact, such a method must be a non-private non-static method of a CDI bean.  As a consequence of being a method of a CDI bean a scheduled method can be annotated with interceptor bindings, such as `@javax.transaction.Transactional` and `@org.eclipse.microprofile.metrics.annotation.Counted`."
-msgstr "メソッドに `@io.quarkus.scheduler.Scheduled` をアノテーションすると、自動的に呼び出されるようにスケジュールされます。実際には、そのようなメソッドはCDIビーンの非プライベート非静的メソッドでなければなりません。CDIビーンのメソッドであることの結果として、スケジュールされたメソッドは、 `@javax.transaction.Transactional` や `@org.eclipse.microprofile.metrics.annotation.Counted` のようなインターセプターバインディングでアノテーションすることができます。"
+msgstr "メソッドに `@io.quarkus.scheduler.Scheduled` をアノテーションすると、自動的に呼び出されるようにスケジュールされます。実際には、そのようなメソッドはCDI Beanの非プライベート非静的メソッドでなければなりません。CDI Beanのメソッドであることの結果として、スケジュールされたメソッドは、 `@javax.transaction.Transactional` や `@org.eclipse.microprofile.metrics.annotation.Counted` のようなインターセプターバインディングでアノテーションすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/scheduler-reference.adoc:30
