--- a/l10n/po/ja_JP/_posts/2019-07-31-quarkus-0-20-0-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-07-31-quarkus-0-20-0-released.adoc.po
@@ -92,7 +92,7 @@ msgstr "Hibernate ValidatorとCDIの統合を改善"
 #: upstream/_posts/2019-07-31-quarkus-0-20-0-released.adoc:32
 #, fuzzy
 msgid "Hibernate Validator is now fully integrated with CDI in Quarkus. You can even tweak the `ValidatorFactory` just by declaring beans in your applications. Just have a look at link:/guides/validation#going-further[the updated documentation] to learn more about it."
-msgstr "Hibernate ValidatorがQuarkusのCDIと完全に統合されました。アプリケーションでビーンを宣言するだけで、 `ValidatorFactory` を微調整することもできます。詳細については、 link:/guides/validation#going-further[更新されたドキュメントを] ご覧ください。"
+msgstr "Hibernate ValidatorがQuarkusのCDIと完全に統合されました。アプリケーションでBeanを宣言するだけで、 `ValidatorFactory` を微調整することもできます。詳細については、 link:/guides/validation#going-further[更新されたドキュメントを] ご覧ください。"
 
 #. type: Title ===
 #: upstream/_posts/2019-07-31-quarkus-0-20-0-released.adoc:33
