--- a/l10n/po/ja_JP/_posts/2020-01-28-quarkus-1-2-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-01-28-quarkus-1-2-0-final-released.adoc.po
@@ -142,7 +142,7 @@ msgstr "キャッシュ拡張"
 #: upstream/_posts/2020-01-28-quarkus-1-2-0-final-released.adoc:53
 #, fuzzy
 msgid "A brand new Cache extension allows to cache the return values of your CDI beans methods.  It is based on Caffeine and comes with a set of annotations to drive it."
-msgstr "新しい Cache 拡張モジュールは、CDI ビーンズメソッドの戻り値をキャッシュすることができます。これは Caffeine をベースにしており、それを駆動するためのアノテーションのセットが付属しています。"
+msgstr "新しい Cache 拡張モジュールは、CDI Beanメソッドの戻り値をキャッシュすることができます。これは Caffeine をベースにしており、それを駆動するためのアノテーションのセットが付属しています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-01-28-quarkus-1-2-0-final-released.adoc:55
@@ -329,7 +329,7 @@ msgstr "Hibernate Validator のローカライズ"
 #: upstream/_posts/2020-01-28-quarkus-1-2-0-final-released.adoc:127
 #, fuzzy
 msgid "If you configure your Quarkus application to support several locales, Hibernate Validator will now automatically resolve the locale to use from the `Accept-Language` header if you're validating beans or methods in the context of a REST call."
-msgstr "複数のロケールをサポートするようにQuarkusアプリケーションを設定している場合、REST呼び出しのコンテキストでビーンやメソッドを検証している場合、Hibernate Validatorは自動的に `Accept-Language` ヘッダーから使用するロケールを解決するようになりました。"
+msgstr "複数のロケールをサポートするようにQuarkusアプリケーションを設定している場合、REST呼び出しのコンテキストでBeanやメソッドを検証している場合、Hibernate Validatorは自動的に `Accept-Language` ヘッダーから使用するロケールを解決するようになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2020-01-28-quarkus-1-2-0-final-released.adoc:129
