--- a/l10n/po/ja_JP/_posts/2020-02-24-qute.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-02-24-qute.adoc.po
@@ -98,7 +98,7 @@ msgstr "データクラスを新しい機能で拡張するための link:https:
 #: upstream/_posts/2020-02-24-qute.adoc:38
 #, fuzzy
 msgid "If you come from the world of JSP/JSF/Facelets you'll appreciate that `@Named` CDI beans can be referenced directly in any template through the `inject` namespace, e.g. `{inject:foo.price}`. See https://quarkus.io/guides/qute-reference#injecting-beans-directly-in-templates[Injecting Beans Directly In Templates] for more information."
-msgstr "JSP/JSF/Facelet の世界から来たのであれば、 `@Named` CDI ビーンズが `inject` 名前空間を介して、どのテンプレートでも直接参照できることを理解するでしょう、例えば `{inject:foo.price}` .詳細については、「 link:https://quarkus.io/guides/qute-reference#injecting-beans-directly-in-templates[テンプレートに直接ビーンズを注入] する」を参照してください。"
+msgstr "JSP/JSF/Facelet の世界から来たのであれば、 `@Named` CDI Beanが `inject` 名前空間を介して、どのテンプレートでも直接参照できることを理解するでしょう、例えば `{inject:foo.price}` .詳細については、「 link:https://quarkus.io/guides/qute-reference#injecting-beans-directly-in-templates[テンプレートに直接Beanを注入] する」を参照してください。"
 
 #. type: Plain text
 #: upstream/_posts/2020-02-24-qute.adoc:41
