--- a/l10n/po/ja_JP/_posts/2020-04-27-quarkus-1-4-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-04-27-quarkus-1-4-final-released.adoc.po
@@ -224,7 +224,7 @@ msgstr "link:/guides/azure-functions-http[RESTEasy、Undertow、またはVert.x 
 #: upstream/_posts/2020-04-27-quarkus-1-4-final-released.adoc:68
 #, fuzzy
 msgid "Mocking CDI beans is now easier than ever. We also have a nice integration with Mockito."
-msgstr "CDI豆のモッキングがこれまで以上に簡単になりました。また、Mockito との素敵な統合もあります。"
+msgstr "CDI Beanのモッキングがこれまで以上に簡単になりました。また、Mockito との素敵な統合もあります。"
 
 #. type: Plain text
 #: upstream/_posts/2020-04-27-quarkus-1-4-final-released.adoc:70
