--- a/l10n/po/ja_JP/_posts/2020-07-09-quarkus-cassandra-extension-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-07-09-quarkus-cassandra-extension-released.adoc.po
@@ -144,7 +144,7 @@ msgstr "Mutinyタイプは、Cassandra Javaドライバーの link:https://docs.
 #: upstream/_posts/2020-07-09-quarkus-cassandra-extension-released.adoc:62
 #, fuzzy
 msgid "For example, suppose that you have a `Product` entity, a `ProductDao` and a `ProductMapper` with standard CRUD operations, you can expose your DAO as an injectable bean:"
-msgstr "例えば、 `Product` エンティティー、 `ProductDao` 、 `ProductMapper` を標準の CRUD 操作で持っているとすると、DAO を注入可能なビーンとして公開することができます。"
+msgstr "例えば、 `Product` エンティティー、 `ProductDao` 、 `ProductMapper` を標準の CRUD 操作で持っているとすると、DAO を注入可能なBeanとして公開することができます。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-07-09-quarkus-cassandra-extension-released.adoc:66
