--- a/l10n/po/ja_JP/_guides/cache.adoc.po
+++ b/l10n/po/ja_JP/_guides/cache.adoc.po
@@ -489,7 +489,7 @@ msgstr "アノテーションのキャッシング"
 #: upstream/_guides/cache.adoc:276
 #, fuzzy
 msgid "Quarkus offers a set of annotations that can be used in a CDI managed bean to enable caching abilities."
-msgstr "Quarkusは、CDI管理されたビーンで使用できるアノテーションのセットを提供し、キャッシング機能を有効にします。"
+msgstr "Quarkusは、CDI管理されたBeanで使用できるアノテーションのセットを提供し、キャッシング機能を有効にします。"
 
 #. type: delimited block =
 #: upstream/_guides/cache.adoc:281
@@ -736,7 +736,7 @@ msgstr "`bar` キャッシュの設定を行っています。"
 #: upstream/_guides/cache.adoc:401
 #, fuzzy, no-wrap
 msgid "Annotated beans examples"
-msgstr "注釈付き豆の例"
+msgstr "注釈付きBeanの例"
 
 #. type: Title ===
 #: upstream/_guides/cache.adoc:403
