--- a/l10n/po/ja_JP/_guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm-panache.adoc.po
@@ -1226,7 +1226,7 @@ msgstr "取引"
 #: upstream/_guides/hibernate-orm-panache.adoc:635
 #, fuzzy
 msgid "Make sure to wrap methods modifying your database (e.g. `entity.persist()`) within a transaction. Marking a CDI bean method `@Transactional` will do that for you and make that method a transaction boundary. We recommend doing so at your application entry point boundaries like your REST endpoint controllers."
-msgstr "データベースを変更するメソッド (例: `entity.persist()` ) をトランザクション内でラップするようにしてください。CDI ビーンメソッド `@Transactional` をマークすることで、それを行い、そのメソッドをトランザクションの境界にします。REST エンドポイントコントローラのように、アプリケーションのエントリーポイントの境界でこれを行うことをお勧めします。"
+msgstr "データベースを変更するメソッド (例: `entity.persist()` ) をトランザクション内でラップするようにしてください。CDI Beanメソッド `@Transactional` をマークすることで、それを行い、そのメソッドをトランザクションの境界にします。REST エンドポイントコントローラのように、アプリケーションのエントリーポイントの境界でこれを行うことをお勧めします。"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm-panache.adoc:641
@@ -1633,7 +1633,7 @@ msgstr "リポジトリパターンの使用"
 #: upstream/_guides/hibernate-orm-panache.adoc:855
 #, fuzzy
 msgid "If you are using the repository pattern you can use Mockito directly, using the `quarkus-junit5-mockito` module, which makes mocking beans much easier:"
-msgstr "リポジトリパターンを使用している場合は、 `quarkus-junit5-mockito` モジュールを使用して直接 Mockito を使用することができますので、ビーンズのモッキングが非常に簡単になります。"
+msgstr "リポジトリパターンを使用している場合は、 `quarkus-junit5-mockito` モジュールを使用して直接 Mockito を使用することができますので、Beanのモッキングが非常に簡単になります。"
 
 #. type: delimited block -
 #: upstream/_guides/hibernate-orm-panache.adoc:863
