--- a/l10n/po/ja_JP/_guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_guides/micrometer.adoc.po
@@ -508,7 +508,7 @@ msgstr "MeterFilter を使ってメトリクスを設定する"
 #: upstream/_guides/micrometer.adoc:290
 #, fuzzy
 msgid "Micrometer uses `MeterFilter` instances to customize the metrics emitted by `MeterRegistry` instances.  The Micrometer extension will detect `MeterFilter` CDI beans and use them when initializing `MeterRegistry` instances."
-msgstr "Micrometer は `MeterFilter` インスタンスを使用して、 `MeterRegistry` インスタンスが発するメトリクスをカスタマイズします。Micrometer 拡張モジュールは `MeterFilter` CDI ビーンを検出し、 `MeterRegistry` インスタンスを初期化する際に使用します。"
+msgstr "Micrometer は `MeterFilter` インスタンスを使用して、 `MeterRegistry` インスタンスが発するメトリクスをカスタマイズします。Micrometer 拡張モジュールは `MeterFilter` CDI Beanを検出し、 `MeterRegistry` インスタンスを初期化する際に使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:295
@@ -582,7 +582,7 @@ msgstr ""
 #: upstream/_guides/micrometer.adoc:340
 #, fuzzy
 msgid "In this example, a singleton CDI bean will produce two different `MeterFilter` beans. One will be applied only to Prometheus `MeterRegistry` instances (using the `@MeterFilterConstraint` qualifier), and another will be applied to all `MeterRegistry` instances. An application configuration property is also injected and used as a tag value."
-msgstr "この例では、シングルトン CDI ビーンは、2 つの異なる `MeterFilter` ビーンを生成します。1 つは Prometheus `MeterRegistry` インスタンスのみに適用され ( `@MeterFilterConstraint` qualifier を使用)、もう 1 つはすべての `MeterRegistry` インスタンスに適用されます。アプリケーション設定プロパティーも注入され、タグ値として使用されます。"
+msgstr "この例では、シングルトン CDI Beanは、2 つの異なる `MeterFilter` Beanを生成します。1 つは Prometheus `MeterRegistry` インスタンスのみに適用され ( `@MeterFilterConstraint` qualifier を使用)、もう 1 つはすべての `MeterRegistry` インスタンスに適用されます。アプリケーション設定プロパティーも注入され、タグ値として使用されます。"
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:341
