--- a/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
@@ -319,7 +319,7 @@ msgstr "ヘルスチェックアノテーションの一つでアノテーショ
 #: upstream/_guides/microprofile-health.adoc:131
 #, fuzzy
 msgid "As you can see, the health check procedures are defined as CDI beans that implement the `HealthCheck` interface and are annotated with one of the health check qualifiers, such as:"
-msgstr "ご覧のように、ヘルスチェックの手続きは `HealthCheck` インターフェイスを実装した CDI ビーンズとして定義されており、ヘルスチェック修飾子のいずれかでアノテーションされています。"
+msgstr "ご覧のように、ヘルスチェックの手続きは `HealthCheck` インターフェイスを実装した CDI Beanとして定義されており、ヘルスチェック修飾子のいずれかでアノテーションされています。"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:133
