--- a/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
@@ -138,7 +138,7 @@ msgstr "RESTリソースを公開する"
 #: upstream/_guides/openapi-swaggerui.adoc:57
 #, fuzzy
 msgid "We will create a `Fruit` bean and a `FruitResouce` REST resource (feel free to take a look to the link:rest-json[Writing JSON REST services guide] if your want more details on how to build a REST API with Quarkus)."
-msgstr "`Fruit` ビーンと `FruitResouce` RESTリソースを作成します(QuarkusでREST APIを構築する方法の詳細については、 link:rest-json[Writing JSON REST servicesガイド] を参照してください)。"
+msgstr "`Fruit` Beanと `FruitResouce` RESTリソースを作成します(QuarkusでREST APIを構築する方法の詳細については、 link:rest-json[Writing JSON REST servicesガイド] を参照してください)。"
 
 #. type: delimited block -
 #: upstream/_guides/openapi-swaggerui.adoc:61
