--- a/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-routes.adoc.po
@@ -87,7 +87,7 @@ msgstr ""
 #: upstream/_guides/reactive-routes.adoc:43
 #, fuzzy
 msgid "Then in a _bean_, you can use the `@Route` annotation as follows:"
-msgstr "そして、 _ビーン_ では、以下のように `@Route` アノテーションを使用することができます。"
+msgstr "そして、 _Bean_ では、以下のように `@Route` アノテーションを使用することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-routes.adoc:47
@@ -431,7 +431,7 @@ msgstr "リアクティブルートの方法"
 #: upstream/_guides/reactive-routes.adoc:202
 #, fuzzy
 msgid "A route method must be a non-private non-static method of a CDI bean.  If the annotated method returns `void` then it has to accept at least one argument - see the supported types below.  If the annotated method does not return `void` then the arguments are optional."
-msgstr "ルートメソッドは、CDIビーンの非プライベート非静的メソッドでなければなりません。注釈付きメソッドが `void` を返す場合は、少なくとも一つの引数を受け入れなければなりません - 以下のサポートされている型を参照してください。アノテーションされたメソッドが `void` を返さない場合、引数はオプションです。"
+msgstr "ルートメソッドは、CDI Beanの非プライベート非静的メソッドでなければなりません。注釈付きメソッドが `void` を返す場合は、少なくとも一つの引数を受け入れなければなりません - 以下のサポートされている型を参照してください。アノテーションされたメソッドが `void` を返さない場合、引数はオプションです。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-routes.adoc:205
