--- a/l10n/po/ja_JP/_guides/sending-emails.adoc.po
+++ b/l10n/po/ja_JP/_guides/sending-emails.adoc.po
@@ -167,7 +167,7 @@ msgstr "簡単なメールの送信"
 #: upstream/_guides/sending-emails.adoc:70
 #, fuzzy
 msgid "In a JAX-RS resource, or in a bean, you can inject the mailer as follows:"
-msgstr "JAX-RSリソース内、またはビーン内では、以下のようにメーラーを注入することができます。"
+msgstr "JAX-RSリソース内、またはBean内では、以下のようにメーラーを注入することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/sending-emails.adoc:75
@@ -367,7 +367,7 @@ msgstr "メール送信のテスト"
 #: upstream/_guides/sending-emails.adoc:186
 #, fuzzy
 msgid "Because it is very inconvenient to send emails during development and testing, you can set the `quarkus.mailer.mock` boolean configuration to `true` to not actually send emails but print them on stdout and collect them in a `MockMailbox` bean instead.  This is the default if you are running Quarkus in `DEV` or `TEST` mode."
-msgstr "開発中やテスト中にメールを送信するのは非常に不便なので、 `quarkus.mailer.mock` のブール設定を `true` に設定して、実際にはメールを送信せずに標準出力に印刷して、代わりに `MockMailbox` ビーンに収集することができます。これは、 `DEV` または `TEST` モードでQuarkusを実行している場合のデフォルトです。"
+msgstr "開発中やテスト中にメールを送信するのは非常に不便なので、 `quarkus.mailer.mock` のブール設定を `true` に設定して、実際にはメールを送信せずに標準出力に印刷して、代わりに `MockMailbox` Beanに収集することができます。これは、 `DEV` または `TEST` モードでQuarkusを実行している場合のデフォルトです。"
 
 #. type: Plain text
 #: upstream/_guides/sending-emails.adoc:188
