--- a/l10n/po/ja_JP/_guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_guides/vault.adoc.po
@@ -907,7 +907,7 @@ msgstr "保管庫のプロビジョニング"
 #: upstream/_guides/vault.adoc:457
 #, fuzzy
 msgid "Beside the typical client use cases, the Quarkus extension can be used to provision Vault as well, for instance as part of a CD pipeline. Specific CDI beans and operations support this scenario:"
-msgstr "Quarkusエクステンションは、典型的なクライアントのユースケースのほかに、例えばCDパイプラインの一部としてVaultのプロビジョニングにも使用できます。特定のCDIビーンと操作がこのシナリオをサポートしています。"
+msgstr "Quarkusエクステンションは、典型的なクライアントのユースケースのほかに、例えばCDパイプラインの一部としてVaultのプロビジョニングにも使用できます。特定のCDI Beanと操作がこのシナリオをサポートしています。"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:459
