--- a/l10n/po/ja_JP/_posts/2019-07-25-quarkus-dependency-injection.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-07-25-quarkus-dependency-injection.adoc.po
@@ -98,7 +98,7 @@ msgstr "フェイルファスト"
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:34
 #, fuzzy
 msgid "Beans and dependencies are validated during the build so that your application can never fail in production with common problems such as `AmbiguousResolutionException` or `UnsatisfiedResolutionException`."
-msgstr "ビーンと依存関係はビルド中に検証されるので、 `AmbiguousResolutionException` や `UnsatisfiedResolutionException` のような一般的な問題でアプリケーションが本番環境で失敗することはありません。"
+msgstr "Beanと依存関係はビルド中に検証されるので、 `AmbiguousResolutionException` や `UnsatisfiedResolutionException` のような一般的な問題でアプリケーションが本番環境で失敗することはありません。"
 
 #. type: Title ===
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:35
@@ -258,7 +258,7 @@ msgstr ""
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:111
 #, fuzzy
 msgid "There is no need to declare dummy constructors for normal scoped bean in Quarkus - they are generated automatically.  Also if there's only one constructor there is no need for `@Inject`."
-msgstr "Quarkusでは、通常のスコープ付きビーンのためにダミーのコンストラクタを宣言する必要はありません - 自動的に生成されます。また、コンストラクタが1つしかない場合は、 `@Inject` ."
+msgstr "Quarkusでは、通常のスコープ付きBeanのためにダミーのコンストラクタを宣言する必要はありません - 自動的に生成されます。また、コンストラクタが1つしかない場合は、 `@Inject` ."
 
 #. type: delimited block -
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:123
@@ -274,19 +274,19 @@ msgstr ""
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:126
 #, fuzzy
 msgid "We don't generate a no-args constructor automatically if a bean class extends another class that does not declare a no-args constructor."
-msgstr "ビーンクラスが他のクラスを拡張していて、そのクラスがノーアルグス・コンストラクタを宣言していない場合、ノーアルグス・コンストラクタは自動的に生成されません。"
+msgstr "Beanクラスが他のクラスを拡張していて、そのクラスがノーアルグス・コンストラクタを宣言していない場合、ノーアルグス・コンストラクタは自動的に生成されません。"
 
 #. type: Title ===
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:127
 #, fuzzy, no-wrap
 msgid "Default Beans"
-msgstr "デフォルトのビーンズ"
+msgstr "デフォルトのBean"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:131
 #, fuzzy
 msgid "CDI has a feature called https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#alternatives[alternatives].  Simply said a bean annotated with `@Alternative` and `@Priority` takes precedence over the non-alternative beans during type-safe resolution."
-msgstr "CDIには、 link:https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#alternatives[オルタナティブ] と呼ばれる機能があります。簡単に言うと、 `@Alternative` と `@Priority` でアノテーションされたビーンが、タイプセーフな解決の際に非代替ビーンよりも優先されるということです。"
+msgstr "CDIには、 link:https://docs.jboss.org/cdi/spec/2.0/cdi-spec.html#alternatives[オルタナティブ] と呼ばれる機能があります。簡単に言うと、 `@Alternative` と `@Priority` でアノテーションされたBeanが、タイプセーフな解決の際に非代替Beanよりも優先されるということです。"
 
 #. type: delimited block -
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:136
@@ -318,7 +318,7 @@ msgstr ""
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:153
 #, fuzzy
 msgid "So, what if a user wants to override a bean defined by a library/extension? The bean would have to be marked as a CDI `@Alternative` that is enabled using the `@Priority` annotation.  Is there a simpler approach? Yes, there is.  You can use a non-standard feature called \"default beans\".  In this case, a bean that can be overridden should be annotated with `@io.quarkus.arc.DefaultBean`.  And that's it."
-msgstr "では、ユーザーがライブラリ/拡張によって定義されたビーンをオーバーライドしたい場合はどうすればいいのでしょうか?ビーンは、 `@Priority` アノテーションを使用して有効になっているCDI `@Alternative` としてマークされなければなりません。もっとシンプルなアプローチはありますか?はい、あります。デフォルトビーン」と呼ばれる非標準の機能を使うことができます。この場合、オーバーライド可能なビーンは `@io.quarkus.arc.DefaultBean` でアノテーションされるべきです。そして、それだけです。"
+msgstr "では、ユーザーがライブラリ/拡張によって定義されたBeanをオーバーライドしたい場合はどうすればいいのでしょうか?Beanは、 `@Priority` アノテーションを使用して有効になっているCDI `@Alternative` としてマークされなければなりません。もっとシンプルなアプローチはありますか?はい、あります。デフォルトBean」と呼ばれる非標準の機能を使うことができます。この場合、オーバーライド可能なBeanは `@io.quarkus.arc.DefaultBean` でアノテーションされるべきです。そして、それだけです。"
 
 #. type: delimited block -
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:159
@@ -349,25 +349,25 @@ msgstr ""
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:167
 #, fuzzy, no-wrap
 msgid "Removing Unused Beans"
-msgstr "使用していない豆の除去"
+msgstr "使用していないBeanの除去"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:173
 #, fuzzy
 msgid "GraalVM native image does a pretty good job when removing all classes that are not reachable from your application.  However, sometimes checking reachability is not enough.  Sometimes the framework itself must decide whether a component is needed or not.  In standard CDI, all beans are retained by the container no matter whether they're needed or not."
-msgstr "GraalVMネイティブイメージは、アプリケーションから到達不可能なクラスをすべて削除する際に、かなり良い仕事をしてくれます。しかし、到達可能性のチェックだけでは十分ではないこともあります。時には、フレームワーク自体がコンポーネントが必要かどうかを判断しなければならないこともあります。標準的な CDI では、必要かどうかに関わらず、すべてのビーンはコンテナーによって保持されます。"
+msgstr "GraalVMネイティブイメージは、アプリケーションから到達不可能なクラスをすべて削除する際に、かなり良い仕事をしてくれます。しかし、到達可能性のチェックだけでは十分ではないこともあります。時には、フレームワーク自体がコンポーネントが必要かどうかを判断しなければならないこともあります。標準的な CDI では、必要かどうかに関わらず、すべてのBeanはコンテナーによって保持されます。"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:180
 #, fuzzy
 msgid "Let's suppose we have a bean class `org.acme.Foo`.  This bean class imports and uses a lot of various classes.  It's annotated with `@ApplicationScoped` and so Quarkus needs to generate a bean metadata class and a client proxy and register this metadata when the application starts.  But what if nobody ever uses this bean? We would still hold a reference on the generated metadata, and the bean class itself, and its dependencies.  In other words, all these classes would be reachable."
-msgstr "ビーンクラス `org.acme.Foo` があるとしましょう。このBeanクラスは、さまざまなクラスをインポートして使用しています。これは `@ApplicationScoped` とアノテーションされているので、Quarkusはアプリケーションの起動時にビーンのメタデータクラスとクライアントプロキシーを生成して、このメタデータを登録する必要があります。しかし、誰もこのビーンを使わないとしたらどうなるでしょうか?生成されたメタデータと、ビーンクラス自体とその依存関係についての参照を保持することになります。言い換えれば、これらのクラスはすべて到達可能であるということです。"
+msgstr "Beanクラス `org.acme.Foo` があるとしましょう。このBeanクラスは、さまざまなクラスをインポートして使用しています。これは `@ApplicationScoped` とアノテーションされているので、Quarkusはアプリケーションの起動時にBeanのメタデータクラスとクライアントプロキシーを生成して、このメタデータを登録する必要があります。しかし、誰もこのBeanを使わないとしたらどうなるでしょうか?生成されたメタデータと、Beanクラス自体とその依存関係についての参照を保持することになります。言い換えれば、これらのクラスはすべて到達可能であるということです。"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:187
 #, fuzzy
 msgid "Quarkus attempts to remove all *unused beans* during build by default.  This helps to reduce the number of generated classes and also the amount of memory needed at runtime.  But how do we actually detect an unused bean? The rules are described in the https://quarkus.io/guides/cdi-reference#remove_unused_beans[reference guide] but simply said: if a bean is not injected anywhere and cannot be reached in any other standard way (e.g. observer notification) it is removed.  Moreover, users can instruct the container to not remove a bean by annotating the bean class with `@io.quarkus.arc.Unremovable`.  Finally, this optimization can be disabled and fine tuned by using the `quarkus.arc.remove-unused-beans` property."
-msgstr "Quarkusは、デフォルトではビルド中に *未使用のビーンを* すべて削除しようとします。これにより、生成されるクラスの数を減らし、実行時に必要なメモリー量を減らすことができます。しかし、実際にどのようにして未使用のビーンを検出するのでしょうか?ルールは link:https://quarkus.io/guides/cdi-reference#remove_unused_beans[リファレンスガイド] に記載されていますが、簡単に言うと、ビーンがどこにも注入されておらず、他の標準的な方法(例えばオブザーバ通知)で到達できない場合、それは削除されます。さらに、ユーザーはBeanクラスに `@io.quarkus.arc.Unremovable` をアノテーションすることで、コンテナーにBeanを削除しないように指示することができます。最後に、 `quarkus.arc.remove-unused-beans` プロパティーを使用して、この最適化を無効にしたり、微調整したりすることができます。"
+msgstr "Quarkusは、デフォルトではビルド中に *未使用のBeanを* すべて削除しようとします。これにより、生成されるクラスの数を減らし、実行時に必要なメモリー量を減らすことができます。しかし、実際にどのようにして未使用のBeanを検出するのでしょうか?ルールは link:https://quarkus.io/guides/cdi-reference#remove_unused_beans[リファレンスガイド] に記載されていますが、簡単に言うと、Beanがどこにも注入されておらず、他の標準的な方法(例えばオブザーバ通知)で到達できない場合、それは削除されます。さらに、ユーザーはBeanクラスに `@io.quarkus.arc.Unremovable` をアノテーションすることで、コンテナーにBeanを削除しないように指示することができます。最後に、 `quarkus.arc.remove-unused-beans` プロパティーを使用して、この最適化を無効にしたり、微調整したりすることができます。"
 
 #. type: Plain text
 #: upstream/_posts/2019-07-25-quarkus-dependency-injection.adoc:188
