--- a/l10n/po/ja_JP/_posts/2019-09-26-quarkus-0-23-1-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-09-26-quarkus-0-23-1-released.adoc.po
@@ -202,7 +202,7 @@ msgstr "Amazon DynamoDB"
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:69
 #, fuzzy
 msgid "The Amazon DynamoDB extension is now fully \"quarked\": you can configure it fully via our centralized `application.properties` and inject the appropriate beans in your applications. We also have [a brand new guide]."
-msgstr "Amazon DynamoDB拡張機能が完全に「クォークされました」: 私たちの一元化された `application.properties` を通して完全に設定し、アプリケーションに適切なビーンズを注入することができます。私たちはまた、[真新しいガイド]を持っています。"
+msgstr "Amazon DynamoDB拡張機能が完全に「クォークされました」: 私たちの一元化された `application.properties` を通して完全に設定し、アプリケーションに適切なBeanを注入することができます。私たちはまた、[真新しいガイド]を持っています。"
 
 #. type: Labeled list
 #: upstream/_posts/2019-09-26-quarkus-0-23-1-released.adoc:70
