--- a/l10n/po/ja_JP/_posts/2020-04-08-why-did-payair-technologies-switch-to-quarkus.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-04-08-why-did-payair-technologies-switch-to-quarkus.adoc.po
@@ -152,7 +152,7 @@ msgstr "革命ではなく進化"
 #: upstream/_posts/2020-04-08-why-did-payair-technologies-switch-to-quarkus.adoc:46
 #, fuzzy
 msgid "What is interesting about this framework is that it is not revolutionary. Since some of Payair’s developers had mainly Spring experience, we were concerned that it would be difficult for them to “switch sides”. It turned out that our fear of the unknown was completely unfounded. Quarkus leverages some good old Jakarta EE standards that all Java developers are familiar with. We did not have to learn a bunch of new APIs that are advertised as \"the best way to create REST endpoint\" or \"reinvented database access\". Instead, Quarkus uses Context Dependency Injection for beans, JAX-RS for RESTful web services, JPA for database access and many others."
-msgstr "このフレームワークで面白いのは、革命的ではないということです。Payairの開発者の中には主にSpringの経験を持っている人もいたので、彼らが\"乗り換える\"のは難しいのではないかと心配していました。しかし、私たちの未知への不安は全くの杞憂であったことがわかりました。Quarkusは、Java開発者なら誰もがよく知っている古き良きジャカルタEE標準を活用しています。RESTエンドポイントを作成するための最良の方法」や「データベースアクセスの再発明」として宣伝されている新しいAPIの束を学ぶ必要はありませんでした。その代わりに、Quarkusは、ビーンズにはContext Dependency Injection、RESTfulなウェブサービスにはJAX-RS、データベースアクセスにはJPA、その他多くのものを使用しています。"
+msgstr "このフレームワークで面白いのは、革命的ではないということです。Payairの開発者の中には主にSpringの経験を持っている人もいたので、彼らが\"乗り換える\"のは難しいのではないかと心配していました。しかし、私たちの未知への不安は全くの杞憂であったことがわかりました。Quarkusは、Java開発者なら誰もがよく知っている古き良きジャカルタEE標準を活用しています。RESTエンドポイントを作成するための最良の方法」や「データベースアクセスの再発明」として宣伝されている新しいAPIの束を学ぶ必要はありませんでした。その代わりに、Quarkusは、BeanにはContext Dependency Injection、RESTfulなウェブサービスにはJAX-RS、データベースアクセスにはJPA、その他多くのものを使用しています。"
 
 #. type: Plain text
 #: upstream/_posts/2020-04-08-why-did-payair-technologies-switch-to-quarkus.adoc:48
