--- a/l10n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-04-28-quarkus-mutual-tls.adoc.po
@@ -569,7 +569,7 @@ msgstr ""
 #: upstream/_posts/2020-04-28-quarkus-mutual-tls.adoc:250
 #, fuzzy
 msgid "Inject the CDI bean."
-msgstr "CDIビーンを注入します。"
+msgstr "CDI Beanを注入します。"
 
 #. type: Plain text
 #: upstream/_posts/2020-04-28-quarkus-mutual-tls.adoc:251
