Replace "Micrometer" translations to "Micrometer"

--- a/l10n/po/ja_JP/_posts/2021-01-20-quarkus-1-11-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-01-20-quarkus-1-11-0-final-released.adoc.po
@@ -46,7 +46,7 @@ msgstr ""
 "title: 'Quarkus 1.11リリース - RESTEasy Reactive、Dev UI、その他もろもろ!'\n"
 "date: 2021-01-20\n"
 "tags: release\n"
-"synopsis: Quarkus 1.11がリリースされました。RESTEasy Reactive、Dev UI、マイクロメーターの強化、jbangのdevモードのサポート、Spring Data RESTが一緒です。\n"
+"synopsis: Quarkus 1.11がリリースされました。RESTEasy Reactive、Dev UI、Micrometerの強化、jbangのdevモードのサポート、Spring Data RESTが一緒です。\n"
 "author: gsmet\n"
 "---\n"
 
