--- a/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
@@ -2284,7 +2284,7 @@ msgstr "さらなる飛躍を目指して"
 #: upstream/_guides/kafka-streams.adoc:1256
 #, fuzzy
 msgid "This guide has shown how you can build stream processing applications using Quarkus and the Kafka Streams APIs, both in JVM and native modes.  For running your KStreams application in production, you could also add health checks and metrics for the data pipeline.  Refer to the Quarkus guides on link:micrometer[Micrometer], link:microprofile-metrics[MicroProfile Metrics], and link:microprofile-health[health checks] to learn more."
-msgstr "このガイドでは、QuarkusとKafka Streams APIを使用して、JVMとネイティブモードの両方でストリーム処理アプリケーションを構築する方法を紹介しました。KStreamsアプリケーションを本番環境で実行するために、データパイプラインのヘルスチェックやメトリクスを追加することもできます。詳細については、 link:micrometer[マイクロメーター] 、 link:microprofile-metrics[マイクロプロファイルメトリクス] 、 link:microprofile-health[ヘルスチェック] に関するQuarkusのガイドを参照してください。"
+msgstr "このガイドでは、QuarkusとKafka Streams APIを使用して、JVMとネイティブモードの両方でストリーム処理アプリケーションを構築する方法を紹介しました。KStreamsアプリケーションを本番環境で実行するために、データパイプラインのヘルスチェックやメトリクスを追加することもできます。詳細については、 link:micrometer[Micrometer] 、 link:microprofile-metrics[マイクロプロファイルメトリクス] 、 link:microprofile-health[ヘルスチェック] に関するQuarkusのガイドを参照してください。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-streams.adoc:1257
