--- a/l10n/po/ja_JP/_guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_guides/micrometer.adoc.po
@@ -23,13 +23,13 @@ msgstr ""
 #: upstream/_guides/micrometer.adoc:6
 #, fuzzy, no-wrap
 msgid "Quarkus - Micrometer Metrics"
-msgstr "Quarkus - マイクロメータメトリクス"
+msgstr "Quarkus - Micrometerメトリクス"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:12
 #, fuzzy
 msgid "This guide demonstrates how your Quarkus application can utilize the Micrometer metrics library for runtime and application metrics."
-msgstr "このガイドでは、Quarkusアプリケーションがランタイムメトリクスとアプリケーションメトリクスのためにマイクロメータメトリクスライブラリを利用する方法を説明します。"
+msgstr "このガイドでは、QuarkusアプリケーションがランタイムメトリクスとアプリケーションメトリクスのためにMicrometerメトリクスライブラリを利用する方法を説明します。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:16
@@ -41,7 +41,7 @@ msgstr "このガイドで説明されているアプリケーション固有の
 #: upstream/_guides/micrometer.adoc:18
 #, fuzzy
 msgid "Micrometer is the recommended approach to metrics for Quarkus."
-msgstr "マイクロメーターは、Quarkusのメトリクスに推奨されるアプローチです。"
+msgstr "Micrometerは、Quarkusのメトリクスに推奨されるアプローチです。"
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:19
@@ -119,7 +119,7 @@ msgstr "Mavenプロジェクトの作成"
 #: upstream/_guides/micrometer.adoc:48
 #, fuzzy
 msgid "Micrometer defines a core library and a set of additional libraries that support different monitoring systems.  Quarkus Micrometer extensions are structured similarly: `quarkus-micrometer` provides core micrometer support and runtime integration and other supporting Quarkus and Quarkiverse extensions bring in additional dependencies and requirements to support specific monitoring systems."
-msgstr "マイクロメーターは、コアライブラリと、さまざまなモニターリングシステムをサポートする追加ライブラリのセットを定義しています。Quarkus Micrometerの拡張機能も似たような構造になっています。 `quarkus-micrometer` はコアマイクロメーターのサポートとランタイムの統合を提供し、他のサポートするQuarkusやQuarkiverseの拡張機能は、特定のモニターリングシステムをサポートするための追加の依存関係や要件をもたらします。"
+msgstr "Micrometerは、コアライブラリと、さまざまなモニターリングシステムをサポートする追加ライブラリのセットを定義しています。Quarkus Micrometerの拡張機能も似たような構造になっています。 `quarkus-micrometer` はコアMicrometerのサポートとランタイムの統合を提供し、他のサポートするQuarkusやQuarkiverseの拡張機能は、特定のモニターリングシステムをサポートするための追加の依存関係や要件をもたらします。"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:50
@@ -594,7 +594,7 @@ msgstr "他のレジストリー実装の使用"
 #: upstream/_guides/micrometer.adoc:348
 #, fuzzy
 msgid "If you aren't using Prometheus, you have a few options. Some Micrometer registry implementations have been wrapped in https://github.com/quarkiverse/quarkiverse-micrometer-registry[Quarkiverse extensions].  To use the Micrometer StackDriver MeterRegistry, for example, you would use the `quarkus-micrometer-registry-stackdriver` extension:"
-msgstr "Prometheusを使用していない場合は、いくつかの選択肢があります。いくつかのマイクロメーターのレジストリーの実装は、 link:https://github.com/quarkiverse/quarkiverse-micrometer-registry[Quarkiverseの拡張機能] でラップされています。たとえば、Micrometer StackDriver MeterRegistryを使用するには、 `quarkiverse-micrometer-registry-stackdriver` 拡張モジュールを使用します。"
+msgstr "Prometheusを使用していない場合は、いくつかの選択肢があります。いくつかのMicrometerのレジストリーの実装は、 link:https://github.com/quarkiverse/quarkiverse-micrometer-registry[Quarkiverseの拡張機能] でラップされています。たとえば、Micrometer StackDriver MeterRegistryを使用するには、 `quarkiverse-micrometer-registry-stackdriver` 拡張モジュールを使用します。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:355
@@ -610,7 +610,7 @@ msgstr ""
 #: upstream/_guides/micrometer.adoc:359
 #, fuzzy
 msgid "If the Micrometer registry you would like to use does not yet have an associated extension, use the `quarkus-micrometer` extension and bring in the packaged MeterRegistry dependency directly:"
-msgstr "使用したいマイクロメータレジストリーがまだ関連するエクステンションを持っていない場合は、 `quarkus-micrometer` エクステンションを使用して、パッケージ化された MeterRegistry 依存関係を直接持ち込んでください。"
+msgstr "使用したいMicrometerレジストリーがまだ関連するエクステンションを持っていない場合は、 `quarkus-micrometer` エクステンションを使用して、パッケージ化された MeterRegistry 依存関係を直接持ち込んでください。"
 
 #. type: delimited block -
 #: upstream/_guides/micrometer.adoc:370
@@ -677,13 +677,13 @@ msgstr ""
 #: upstream/_guides/micrometer.adoc:399
 #, fuzzy
 msgid "This example corresponds to the following instructions in the Micrometer documentation: https://micrometer.io/docs/registry/statsD#_customizing_the_metrics_sink"
-msgstr "この例は、マイクロメーターのドキュメントにある以下の指示に対応しています: https://micrometer.io/docs/registry/statsD#_customizing_the_metrics_sink"
+msgstr "この例は、Micrometerのドキュメントにある以下の指示に対応しています: https://micrometer.io/docs/registry/statsD#_customizing_the_metrics_sink"
 
 #. type: Plain text
 #: upstream/_guides/micrometer.adoc:404
 #, fuzzy
 msgid "Note that the method returns the specific type of `MeterRegistry` as a `@Singleton`. Use MicroProfile Config to inject any configuration attributes you need to configure the registry. Most Micrometer registry extensions, like `quarkus-micrometer-registry-statsd`, define a producer for registry-specific configuration objects that are integrated with the Quarkus configuration model."
-msgstr "このメソッドは、 `MeterRegistry` の特定の型を `@Singleton` として返すことに注意してください。レジストリーを設定するために必要な設定属性を注入するには、MicroProfile Configを使用します。 `quarkiverse-micrometer-registry-statsd` のようなほとんどのマイクロメーターのレジストリー拡張機能では、Quarkusの設定モデルと統合されたレジストリー固有の設定オブジェクトのプロデューサを定義しています。"
+msgstr "このメソッドは、 `MeterRegistry` の特定の型を `@Singleton` として返すことに注意してください。レジストリーを設定するために必要な設定属性を注入するには、MicroProfile Configを使用します。 `quarkiverse-micrometer-registry-statsd` のようなほとんどのMicrometerのレジストリー拡張機能では、Quarkusの設定モデルと統合されたレジストリー固有の設定オブジェクトのプロデューサを定義しています。"
 
 #. type: Title ==
 #: upstream/_guides/micrometer.adoc:405
